cosmos/steamaudio-sys/phonon/phonon.h


typedef unsigned char       IPLuint8;   
typedef int                 IPLint32;   
typedef float               IPLfloat32; 
typedef const char*         IPLstring;  
typedef enum {
    IPL_STATUS_SUCCESS,         
    IPL_STATUS_FAILURE,         
    IPL_STATUS_OUTOFMEMORY,     
    IPL_STATUS_INITIALIZATION   
} IPLerror;
typedef void (IPLCALL *IPLProgressCallback)(IPLfloat32 progress, void* userData);
typedef struct {
    IPLfloat32 x;
    IPLfloat32 y;
    IPLfloat32 z;
} IPLVector3;
typedef struct {
    IPLfloat32 elements[4][4];
} IPLMatrix4x4;
typedef enum {
    IPL_SCENETYPE_DEFAULT,
    IPL_SCENETYPE_EMBREE,
    IPL_SCENETYPE_RADEONRAYS,
    IPL_SCENETYPE_CUSTOM
} IPLSceneType;
typedef struct {
    IPLint32 indices[3];
} IPLTriangle;
typedef struct {
    IPLfloat32 absorption[IPL_NUM_BANDS];
    IPLfloat32 scattering;
    IPLfloat32 transmission[IPL_NUM_BANDS];
} IPLMaterial;
typedef struct {
    IPLVector3 origin;
    IPLVector3 direction;
} IPLRay;
typedef struct {
    IPLfloat32 distance;
    IPLint32 triangleIndex;
    IPLint32 objectIndex;
    IPLint32 materialIndex;
    IPLVector3 normal;
    IPLMaterial* material;
} IPLHit;
typedef void (IPLCALL *IPLClosestHitCallback)(const IPLRay* ray, IPLfloat32 minDistance, IPLfloat32 maxDistance, IPLHit* hit, void* userData);
typedef void (IPLCALL *IPLAnyHitCallback)(const IPLRay* ray, IPLfloat32 minDistance, IPLfloat32 maxDistance, IPLuint8* occluded, void* userData);
typedef void (IPLCALL *IPLBatchedClosestHitCallback)(IPLint32 numRays, const IPLRay* rays, const IPLfloat32* minDistances, const IPLfloat32* maxDistances, IPLHit* hits, void* userData);
typedef void (IPLCALL *IPLBatchedAnyHitCallback)(IPLint32 numRays, const IPLRay* rays, const IPLfloat32* minDistances, const IPLfloat32* maxDistances, IPLuint8* occluded, void* userData);
typedef struct {
    IPLSceneType type;
    IPLClosestHitCallback closestHitCallback;
    IPLAnyHitCallback anyHitCallback;
    IPLBatchedClosestHitCallback batchedClosestHitCallback;
    IPLBatchedAnyHitCallback batchedAnyHitCallback;
    void* userData;
    IPLEmbreeDevice embreeDevice;
    IPLRadeonRaysDevice radeonRaysDevice;
} IPLSceneSettings;
typedef struct {
    IPLint32 numVertices;
    IPLint32 numTriangles;
    IPLint32 numMaterials;
    IPLVector3* vertices;
    IPLTriangle* triangles;
    IPLint32* materialIndices;
    IPLMaterial* materials;
} IPLStaticMeshSettings;
typedef struct {
    IPLScene subScene;
    IPLMatrix4x4 transform;
} IPLInstancedMeshSettings;
IPLAPI IPLerror IPLCALL iplSceneCreate(IPLContext context, IPLSceneSettings* settings, IPLScene* scene);
IPLAPI IPLScene IPLCALL iplSceneRetain(IPLScene scene);
IPLAPI void IPLCALL iplSceneRelease(IPLScene* scene);
IPLAPI IPLerror IPLCALL iplSceneLoad(IPLContext context, IPLSceneSettings* settings, IPLSerializedObject serializedObject, IPLProgressCallback progressCallback, void* progressCallbackUserData, IPLScene* scene);
IPLAPI void IPLCALL iplSceneSave(IPLScene scene, IPLSerializedObject serializedObject);
IPLAPI void IPLCALL iplSceneSaveOBJ(IPLScene scene, IPLstring fileBaseName);
IPLAPI void IPLCALL iplSceneCommit(IPLScene scene);
IPLAPI void IPLCALL iplStaticMeshAdd(IPLStaticMesh staticMesh, IPLScene scene);
IPLAPI void IPLCALL iplStaticMeshRemove(IPLStaticMesh staticMesh, IPLScene scene);
IPLAPI void IPLCALL iplInstancedMeshAdd(IPLInstancedMesh instancedMesh, IPLScene scene);
IPLAPI void IPLCALL iplInstancedMeshRemove(IPLInstancedMesh instancedMesh, IPLScene scene);
IPLAPI void IPLCALL iplInstancedMeshUpdateTransform(IPLInstancedMesh instancedMesh, IPLScene scene, IPLMatrix4x4 transform);