cosmos/steamaudio-sys/src/bindings.rs

#[doc = " Callback for calculating the closest hit along a ray.\n\nStrictly speaking, the intersection is calculated with a ray _interval_ (equivalent to a line segment). Any ray\ninterval may have multiple points of intersection with scene geometry; this function must return information\nabout the point of intersection that is closest to the ray's origin.\n\n\\param  ray                 The ray to trace.\n\\param  minDistance         The minimum distance from the origin at which an intersection may occur for it\nto be considered. This function must not return any intersections closer to the\norigin than this value.\n\\param  maxDistance         The maximum distance from the origin at which an intersection may occur for it\nto be considered. This function must not return any intersections farther from\nthe origin than this value. If this value is less than or equal to \\c minDistance,\nthe function should ignore the ray, and return immediately.\n\\param  hit                 [out] Information describing the ray's intersection with geometry, if any.\n\\param  userData            Pointer to a block of memory containing arbitrary data, specified during the call to\n\\c iplSceneCreate."]
pub type IPLClosestHitCallback = ::std::option::Option<
    unsafe extern "C" fn(
        ray: *const IPLRay,
        minDistance: IPLfloat32,
        maxDistance: IPLfloat32,
        hit: *mut IPLHit,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Callback for calculating whether a ray hits any geometry.\n\nStrictly speaking, the intersection is calculated with a ray _interval_ (equivalent to a line segment).\n\n\\param  ray                 The ray to trace.\n\\param  minDistance         The minimum distance from the origin at which an intersection may occur for it\nto be considered. This function must not return any intersections closer to the\norigin than this value.\n\\param  maxDistance         The maximum distance from the origin at which an intersection may occur for it\nto be considered. This function must not return any intersections farther from\nthe origin than this value. If this value is less than or equal to \\c minDistance,\nthe function should ignore the ray, set \\c occluded to 1, and return immediately.\n\\param  occluded            [out] An integer indicating whether the ray intersects any geometry. A value of 0\nindicates no intersection, 1 indicates that an intersection exists.\n\\param  userData            Pointer to a block of memory containing arbitrary data, specified during the call to\n\\c iplSceneCreate."]
pub type IPLAnyHitCallback = ::std::option::Option<
    unsafe extern "C" fn(
        ray: *const IPLRay,
        minDistance: IPLfloat32,
        maxDistance: IPLfloat32,
        occluded: *mut IPLuint8,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Callback for calculating the closest hit along a batch of rays.\n\nStrictly speaking, the intersection is calculated with a ray _interval_ (equivalent to a line segment). Any ray\ninterval may have multiple points of intersection with scene geometry; this function must return information\nabout the point of intersection that is closest to the ray's origin.\n\n\\param  numRays             The number of rays to trace.\n\\param  rays                Array containing the rays.\n\\param  minDistances        Array containing, for each ray, the minimum distance from the origin at which\nan intersection may occur for it to be considered.\n\\param  maxDistances        Array containing, for each ray, the maximum distance from the origin at which\nan intersection may occur for it to be considered. If, for some ray with index \\c i,\n`maxDistances[i]` is less than `minDistances[i]`, the function should ignore\nthe ray.\n\\param  hits                [out] Information describing each ray's intersection with geometry, if any.\n\\param  userData            Pointer to a block of memory containing arbitrary data, specified during the call to\n\\c iplSceneCreate."]
pub type IPLBatchedClosestHitCallback = ::std::option::Option<
    unsafe extern "C" fn(
        numRays: IPLint32,
        rays: *const IPLRay,
        minDistances: *const IPLfloat32,
        maxDistances: *const IPLfloat32,
        hits: *mut IPLHit,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Callback for calculating for each ray in a batch of rays, whether the ray hits any geometry.\n\nStrictly speaking, the intersection is calculated with a ray _interval_ (equivalent to a line segment).\n\n\\param  numRays             The number of rays to trace.\n\\param  rays                Array containing the rays.\n\\param  minDistances        Array containing, for each ray, the minimum distance from the origin at which\nan intersection may occur for it to be considered.\n\\param  maxDistances        Array containing, for each ray, the maximum distance from the origin at which\nan intersection may occur for it to be considered. If, for some ray with index \\c i,\n`maxDistances[i]` is less than `minDistances[i]`, the function should ignore the\nray and set `occluded[i]` to 1.\n\\param  occluded            [out] Array of integers indicating, for each ray, whether the ray intersects any\ngeometry. 0 indicates no intersection, 1 indicates that an intersection exists.\n\\param  userData            Pointer to a block of memory containing arbitrary data, specified during the call to\n\\c iplSceneCreate."]
pub type IPLBatchedAnyHitCallback = ::std::option::Option<
    unsafe extern "C" fn(
        numRays: IPLint32,
        rays: *const IPLRay,
        minDistances: *const IPLfloat32,
        maxDistances: *const IPLfloat32,
        occluded: *mut IPLuint8,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Settings used to create a scene."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSceneSettings {
    #[doc = " Type of scene to create."]
    pub type_: IPLSceneType,
    #[doc = " Callback for finding the closest hit along a ray. Only for \\c IPL_SCENETYPE_CUSTOM."]
    pub closestHitCallback: IPLClosestHitCallback,
    #[doc = " Callback for finding whether a ray hits anything. Only for \\c IPL_SCENETYPE_CUSTOM."]
    pub anyHitCallback: IPLAnyHitCallback,
    #[doc = " Callback for finding the closest hit along a batch of rays. Only for \\c IPL_SCENETYPE_CUSTOM."]
    pub batchedClosestHitCallback: IPLBatchedClosestHitCallback,
    #[doc = " Callback for finding whether a batch of rays hits anything. Only for \\c IPL_SCENETYPE_CUSTOM."]
    pub batchedAnyHitCallback: IPLBatchedAnyHitCallback,
    #[doc = " Arbitrary user-provided data for use by ray tracing callbacks. Only for \\c IPL_SCENETYPE_CUSTOM."]
    pub userData: *mut ::std::os::raw::c_void,
    #[doc = " Handle to an Embree device. Only for \\c IPL_SCENETYPE_EMBREE."]
    pub embreeDevice: IPLEmbreeDevice,
    #[doc = " Handle to a Radeon Rays device. Only for \\c IPL_SCENETYPE_RADEONRAYS."]
    pub radeonRaysDevice: IPLRadeonRaysDevice,
}
#[doc = " Settings used to create a static mesh."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLStaticMeshSettings {
    #[doc = " Number of vertices."]
    pub numVertices: IPLint32,
    #[doc = " Number of triangles."]
    pub numTriangles: IPLint32,
    #[doc = " Number of materials."]
    pub numMaterials: IPLint32,
    #[doc = " Array containing vertices."]
    pub vertices: *mut IPLVector3,
    #[doc = " Array containing (indexed) triangles."]
    pub triangles: *mut IPLTriangle,
    #[doc = " Array containing, for each triangle, the index of the associated material."]
    pub materialIndices: *mut IPLint32,
    #[doc = " Array of materials."]
    pub materials: *mut IPLMaterial,
}
#[doc = " Settings used to create an instanced mesh."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLInstancedMeshSettings {
    #[doc = " Handle to the scene to be instantiated."]
    pub subScene: IPLScene,
    #[doc = " Local-to-world transform that places the instance within the parent scene."]
    pub transform: IPLMatrix4x4,
}
extern "C" {
    #[doc = " Creates a scene.\n\nA scene does not store any geometry information on its own; for that you need to create one or more\nstatic meshes or instanced meshes and add them to the scene.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  settings    The settings to use when creating the scene.\n\\param  scene       [out] The created scene.\n\n\\return Status code indicating success or failure."]
    pub fn iplSceneCreate(
        context: IPLContext,
        settings: *mut IPLSceneSettings,
        scene: *mut IPLScene,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a scene.\n\n\\param  scene   The scene to retain a reference to.\n\n\\return The additional reference to the scene."]
    pub fn iplSceneRetain(scene: IPLScene) -> IPLScene;
}
extern "C" {
    #[doc = " Releases a reference to a scene.\n\n\\param  scene   The scene to release a reference to."]
    pub fn iplSceneRelease(scene: *mut IPLScene);
}
extern "C" {
    #[doc = " Loads a scene from a serialized object. Typically, the serialized object will be created from a byte array\nloaded from disk or over the network.\n\n\\param  context                     The context used to initialize Steam Audio.\n\\param  settings                    The settings to use when creating the scene.\n\\param  serializedObject            The serialized object from which to load the scene.\n\\param  progressCallback            Callback that reports the percentage of this function's work that has been completed. May be \\c NULL.\n\\param  progressCallbackUserData    Pointer to arbitrary data that will be passed to the progress callback. May be \\c NULL.\n\\param  scene                       [out] The created scene.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplSceneLoad(
        context: IPLContext,
        settings: *mut IPLSceneSettings,
        serializedObject: IPLSerializedObject,
        progressCallback: IPLProgressCallback,
        progressCallbackUserData: *mut ::std::os::raw::c_void,
        scene: *mut IPLScene,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Saves a scene to a serialized object. Typically, the serialized object will then be saved to disk.\n\nThis function can only be called on a scene created with \\c IPL_SCENETYPE_DEFAULT.**\n\n\\param  scene               The scene to save.\n\\param  serializedObject    The serialized object into which to save the scene."]
    pub fn iplSceneSave(scene: IPLScene, serializedObject: IPLSerializedObject);
}
extern "C" {
    #[doc = " Saves a scene to an OBJ file.\n\nAn OBJ file is a widely-supported 3D model file format, that can be displayed using a variety of software\non most PC platforms. The OBJ file generated by this function can be useful for detecting problems that\noccur when exporting scene data from your application to Steam Audio.\n\nThis function can only be called on a scene created with \\c IPL_SCENETYPE_DEFAULT or \\c IPL_SCENETYPE_EMBREE.**\n\n\\param  scene               The scene to save.\n\\param  fileBaseName        Absolute or relative path to the OBJ file to generate."]
    pub fn iplSceneSaveOBJ(scene: IPLScene, fileBaseName: IPLstring);
}
extern "C" {
    #[doc = " Commits any changes to the scene.\n\nThis function should be called after any calls to the following functions, for the changes to take effect:\n\n-   \\c iplStaticMeshAdd\n-   \\c iplStaticMeshRemove\n-   \\c iplInstancedMeshAdd\n-   \\c iplInstancedMeshRemove\n-   \\c iplInstancedMeshUpdateTransform\n\nFor best performance, call this function once after all changes have been made for a given frame.\n\nThis function cannot be called concurrently with any simulation functions.**\n\n\\param  scene   The scene to commit changes to."]
    pub fn iplSceneCommit(scene: IPLScene);
}
